chore(api)-refactor code base for adc submission [Finishes #167270800]
