# src/models/usingDb/User.js
@@ -18,12 +18,12 @@ class UserModel {
   static createUser(user) {
     return new Promise((resolve, reject) => {
       const text = 'INSERT INTO users(email, first_name, last_name, password, address, is_admin) VALUES($1, $2, $3, $4, $5, $6) RETURNING *';
-      const values = [user.email, user.firstName, user.lastName, user.password, user.address, user.isAdmin];
+      const values = [user.email, user.first_name, user.last_name, user.password, user.address, user.is_admin];
       db.query(text, values).then(result => resolve(result.rows[0])).catch(err => reject(err));
     });
   }
 
-  static isAdmin(userId) {
+  static is_admin(userId) {
     return new Promise((resolve, reject) => {
       const query = 'SELECT FROM users WHERE id = $1 AND is_admin = $2';
       const values = [userId, true];
